<resources>
    <string name="app_name">OrderingApp</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER NOW</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="signup">SIGNUP</string>
    <string name="full_name">FULL NAME</string>
    <string name="already_registered">Already Registered?</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="mayank">MAYANK</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="logout">LOGOUT</string>
    <string name="orders">Orders</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="add">ADD</string>
    <string name="no">1</string>
    <string name="total">Total : RS </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">VERIFY</string>
    <string name="done">DONEbc</string>
    <string name="pref_previously_started">false</string>
    <string name="quantity">Quantity : </string>
</resources>
