<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_menu"
        android:iconTint="@android:color/white"
        android:title="@string/menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:iconTint="@android:color/white"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:iconTint="@android:color/white"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@android:color/white"
            android:title="@string/logout" />
    </group>

</menu>
